# FocusGame

./: .gitignore  CMakeLists.txt  Changelog.txt  LatestChanges.txt  Main.cpp  README.md  appIcon.rc  toolchain-mingw.cmake
.github/workflows/: deploy.yml
resources/: resources.rc
src/: Backlog.md  Backlog.txt  CameraController.cpp  CameraController.h  Color.cpp  Color.h  Constants.h  Cuboid.cpp  Cuboid.h  GLWindow.cpp  GLWindow.h  GLWindowFunctions.cpp  GLWindowFunctions.h  Main.cpp  OpenGLhub.cpp  OpenGLhub.h  Triangle.cpp  Triangle.h  Utils.cpp  Utils.h
src/app/: AppController.cpp  AppController.h  InputHandler.cpp  InputHandler.h
src/controller/: CameraController.cpp  CameraController.h  GameSession.cpp  GameSession.h  PlayerColorManager.cpp  PlayerColorManager.h
src/graphics/: RenderEnums.cpp  RenderEnums.h  Shader.cpp  Shader.h
src/model/: AppSettings.cpp  AppSettings.h  BoardEditor.cpp  BoardEditor.h  Camera.cpp  Camera.h  Cell.cpp  Cell.h  Checker.cpp  Checker.h  GameBoard.cpp  GameBoard.h  GameModel.cpp  GameModel.h  Player.h  Ray.cpp  Ray.h  User.h  UserConfiguration.h
src/shapes/: Cuboid.cpp  Cuboid.h  Cylinder.cpp  Cylinder.h  GLShapeService.cpp  GLShapeService.h  Line.cpp  Line.h  OpenGLShape.cpp  OpenGLShape.h  ShapeEnums.cpp  ShapeEnums.h  ShapeType.h  Tetrahedron.cpp  Tetrahedron.h  Triangle.cpp  Triangle.h
src/utility/: AABB.cpp  AABB.h  Defaults.h  InputStorage.cpp  InputStorage.h  Logger.cpp  Logger.h  Ray.cpp  Ray.h  SingleInstanceMonitor.cpp  SingleInstanceMonitor.h  UserConfigurationManager.cpp  UserConfigurationManager.h  Utils.cpp  Utils.h
src/view/: BoardView.cpp  BoardView.h  GLWindow.cpp  GLWindow.h  GameView.cpp  GameView.h
